@@ -1,3 +1,4 @@
+0.92.10-0 @03/22/2005 22:35:00 UTC@
 0.92.9-0 @03/20/2005 23:00:00 UTC@
 0.92.8-0 @03/14/2005 20:50:00 UTC@
 0.92.7-0 @03/05/2005 20:50:00 UTC@
