@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-22-2005 patrickh    Added a new method editorClosing() to the interface
+                        org.vrjuggler.jccl.editors.CustomEditor.
+                        NEW VERSION: 0.92.10
 Mar-20-2005 patrickh    Added functions to the JCCL Config Java classes that
                         are useful in performing base type operations on config
                         definitions.
